# arena-fighters

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.omc/state/: agent-replay-f21a5d6b-b381-4fc5-94ec-37201ee3de79.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
docs/: experiments.md  long_run_protocol.md
scripts/: long_run_artifact_smoke.py  reward_shaping_smoke.py  self_play_sampling_smoke.py  smoke_suite.py  train.py  train_eval_smoke.py
src/arena_fighters/: __init__.py  config.py  env.py  evaluation.py  network.py  replay.py  self_play.py
tb_logs/PPO_1/: events.out.tfevents.1775296083.onyx-vnic.447879.0
tb_logs/PPO_2/: events.out.tfevents.1775296412.onyx-vnic.449058.0
tests/: test_config.py  test_env.py  test_evaluation.py  test_integration.py  test_long_run_artifact_smoke.py  test_network.py  test_renderer.py  test_replay.py  test_reward_shaping_smoke.py  test_self_play.py  test_self_play_sampling_smoke.py  test_smoke_suite.py  test_train_eval_smoke.py  test_training_callback.py
